--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+3&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+3&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -5,21 +8,48 @@
     text-decoration: none;
 }
 
+body {
+    background-color: #DCD6F7;
+}
+
+p {
+    font-family: 'Source Sans 3', sans-serif;
+}
+
 .cabecalho {
+    background-color: #202124;
     border-bottom: 0.4px solid black;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     gap: 242px;
+    height: 180.8px;
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.277);
 }
 
-.cabecalho-menu-item {
-    margin: 0px 15px;
+.cabecalho-menu-item {  
+    font-family: 'Source Sans 3', sans-serif;
+    color: #DCD6F7;
+    margin: 10px;
+    padding: 10px;
+    transition-duration: 0.8s; 
 }
 
-.conteudo {
-    margin-top: 48px;
-    margin-bottom: 48px;
+nav > a:hover {
+    background-color: #464e5b;
+    color: #a49cca;
+    border-radius: 5px;
+}
+
+main {
+    min-width: 600px;
+    max-width: 1200px;
+    background-color: white;
+    margin: auto;
+    margin-bottom: -50px;
+    padding-top: 70px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.252);
 }
 
 .conteudo-principal {
@@ -34,35 +64,67 @@
     gap: 32px;
 }
 
+.conteudo-principal-escrito-titulo1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 45px;
+    color: #202124;
+}
+
+.conteudo-principal-escrito-titulo2 {
+    font-family: 'Playfair Display', serif;
+    margin-top: -15px;
+    color: #202124;
+}
+
 .conteudo-principal-escrito-paragrafo {
     height: 72px;
     width: 470px;
-}
-
-.conteudo-principal-modelo_imagem {
-    border: 2px solid black;
-    height: 259px;
-    width: 259px;
-    border-radius: 50%;
+    font-size: 14px;
+    color: #202124;
 }
 
 .conteudo-principal-botao {
+    margin-top: 10px;
     height: 35px;
-    width: 121px;
+    width: 155px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #202124;
+    text-align: center;
+
+    font-family: 'Source Sans 3', sans-serif;
+    font-size: 16px;
+    color: #DCD6F7;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.conteudo-principal-botao a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.conteudo-principal-botao:hover {
+    background-color: #464e5b;
+    color: #a49cca;
 }
 
 .conteudo-secundario {
     margin: 55px auto;
     width: 1100px;
     height: 254px;
-    border-top: 0.4px solid black;
+    border-top: 0.4px solid #A6B1E1;
 }
 
 .conteudo-secundario-paragrafo {
     text-align: center;
+    color: #202124;
 }
 
 #prgf1 {
+    font-family: 'Playfair Display', serif;
     padding: 10px;
 }
 
@@ -70,28 +132,34 @@
     padding: 10px;
     width: 512px;
     margin: auto;
+    font-size: 14px;
 }
 
 #prgf3 {
     padding: 25px;
     width: 512px;
     margin: auto;
-    border-bottom: 0.4px solid black;
+    border-bottom: 0.4px solid #A6B1E1;
+    font-size: 14px;
 }
 
 .conteudo-terciario {
-    margin: 55px 0px;
+    margin: 65px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .conteudo-terciario-imagens {
+    font-family: 'Playfair Display', serif;
     padding: 15px;
+    color: #202124;
 }
 
 .conteudo-terciario-imagens-secao {
-    border: 1px solid black;
+    background-color: #A6B1E1;
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.27);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,7 +172,6 @@
     align-items: center;
     width: 1100px;
     margin: auto;
-    
 }
 
 .conteudo-quaternario-secao1 {
@@ -114,20 +181,30 @@
 }
 
 .conteudo-quaternario-secao1-paragrafo {
-    border-top: 0.4px solid black;
+    font-family: 'Playfair Display', serif;
+    border-top: 0.4px solid #A6B1E1;
     padding: 15px;
+    color: #202124;
 }
 
 .conteudo-quaternario-secao1-lista {
+    font-family: 'Source Sans 3', sans-serif;
     display: flex;
     justify-content: space-around;
+    gap: 90px;
+    margin-top: 15px;
     list-style: none;
     text-align: center;
 }
 
+.conteudo-quaternario-secao1-lista-item a {
+    text-decoration: none;
+    color: #202124;
+}
+
 .conteudo-quaternario-secao2 {
     margin: auto;
-    border-top: 0.4px solid black;
+    border-top: 0.4px solid #A6B1E1;
     width: 1100px;
 }
 
@@ -135,16 +212,23 @@
     margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
+    padding: 0px 0px 50px 0px;
     width: 512px;
     text-align: center;
+    font-size: 14px;
 }
 
 .conteudo-rodape {
+    background-color: #202124;
     border-top: 0.4px solid black;
-    height: 140.8px;
+    height: 180.8px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .conteudo-rodape-paragrafo {
-    text-align: center;
-    margin-top: 50px;
+    color: #DCD6F7;
+    font-size: 14px;
 }
