--- a/style.css
+++ b/style.css
@@ -163,9 +163,103 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1100px;
+    width: 800px;
 }
 
+.slider {
+    margin: 0 auto;
+    width: 502px;
+    height: 400px;
+    margin-top: 60px;
+    overflow: hidden;
+}
+
+.slides {
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+.slides input {
+    display: none;
+}
+
+.slide {
+    width: 25%;
+    position: relative;
+}
+
+.slide img {
+    width: 502px;
+}
+
+.manual-navigation {
+    position: absolute;
+    width: 502px;
+    margin-top: -100px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn {
+    border: 2px solid #A6B1E1;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+.manual-btn:hover {
+    background-color: #A6B1E1;
+}
+
+#radio1:checked ~ .first {
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+    margin-left: -25%;
+}
+
+#radio3:checked ~ .first {
+    margin-left: -50%;
+}
+
+.navigation-auto div {
+    border: 2px solid #A6B1E1;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.navigation-auto {
+    position: absolute;
+    width: 502px;
+    margin-top: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+    background-color: #A6B1E1;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+    background-color: #A6B1E1;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+    background-color: #A6B1E1;
+}
 
 .conteudo-quaternario {
     display: flex;
